tooling/nargo_cli/tests/snapshots/execute__tests__execution_success_assert_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "6604658803274741360",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "10220664360449826677": {
        "error_kind": "fmtstring",
        "length": 33,
        "item_types": [
          {
            "kind": "boolean"
          }
        ]
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/82ZwW6bQBCGF3vBBkzsxr23l/YMGAK9Rar7IKSI5+Adqkq9tY/a0u6ww3RSRcmMykrRArN88+/MsOBNYHwLXG/JuWHG3Ls+f1krBFk5K/RfDcb8cH3s+g2ybwUnGxO/kvw2r+5iZn6C+i+xY2rGB5gK/HznOJ9Gz6dzmVrmznENwT37X38H44+P7jgm92jkVjH2+ZnRv0Fzm9rH0duMkX8uro4vyU5dnt569GJuofk716AjJGNfo3ho1ukt4hriS7kOLhnxhxvYLLpGawI3ysC6p5y8R1w6jvrEsbCPMEPXX0dvC5ANj33j+v+Zy9T4Z8uO8v6bNs/B73b0ceBya5Edj3/nzhNmHvYFOoemK4ZLN3R11/fV547GaWobFCf8DHPPQGCkclbVXE3I8Zs2Nss6FubnwA9V+HdzfCId/vydsdOJTwX8vY7+mR+r8Ms5v4mO/gH4qQ6/BP5BJ78zP9Phz/V/oxOfBvhHHf0PwD/p8Ht4Z78yvsG6Dr7xei/3vi3LgPgzZrmOG+I/IVqlf9MExB/oofGBdxnE7sxoPTE2+g48M37OjB+OtRVkWUFWKMiKBFm7lc5xL8iKBVmS9SWpSzKPyUrnmAqyJGt1rXk8CLIyQdZaYy9ZX5LxkqwJyXjdCLIk15y1xusoyJJ8D8E3tPbeON2n/EL86uxflRW35xcQ36GS74D4M4b/lgf/GaMHdCeP2O6fqbXt+6Zoi/pDXzzUQ1MHhA9a6TX6vR4x47nfBdyeiGCsC1hzYd8PawObRbaQ2EJkA43Td+hXoj9S0v+U+GP/J8ZGc/PUXHKs4JmsW7OsW/xsc/+Xuo5/+hRd341LX797dA1yBbnb4/HEFiObHb2mqSXu3CI/mAU6QjL+uzuHNT1C98D9J8Z/RPwvdDPXcD4pa8tcg/FTjXxzx1NcfwLz0f1oJR8AAA==",
  "debug_symbols": "ldnLisJAEIXhd+l1Fl1dqb74KsMwRI0SCInEODCI7z6JCCPiLP6N2OGcBPItAlVXt2+3l+NXNxzGs9t8XF0/7pq5G4fldL1Vbjt1fd8dv54vO7/+SLznz6dmWI/nuZlmt1GpXDvslz9paR+6vnUb87fPykmC+QzzheWDf5e3+Min/JoXmA8wrzBfw7zBfIT5t74m/+YzzBeWVw/zb+8v6h8FUXlp1B43BDcCbihu1LhhuBFxI+FGxg1sbtjcsLlhc8Pmhs0Nmxs2N2xu2NywecTmEZtHbB6xecTmEZtHbB6xecTmEZsnbJ6wecLmCZsnbJ6wecLmCZsnbJ6wecbmGZtnbJ6xecbmGZtnbJ6xecbmGZsXbF6wecHmBZsXbF6wecHmBZsXbF6wuXjPK8IrgVeUV2peMV6JvJJ4JfMK1xeuL1xfuL5wfeH6wvWF6wvXF64vXD9w/cD1A9cPXD9w/cD1A9cPXD9w/cD1lesr11eur1xfub5yfeX6yvWV6/N5nfCBnfCJnfCRnfCZnfChnfCpndCx3W05fTdT12z79rFBOFyG3dNCYf45tS+7hdM07tr9ZWrXLcPfgmF9J1KXSqzcv/TLUUOlaXnI8qBf",
  "file_map": {
    "50": {
      "source": "fn main(x: Field) {\n    assert(x == 1);\n    assert(1 == conditional(x as bool));\n}\n\nfn conditional(x: bool) -> Field {\n    assert(x, f\"Expected x to be true but got {x}\");\n    assert_eq(x, true, f\"Expected x to be true but got {x}\");\n    1\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
